--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -35,9 +35,9 @@ Parameters:
     Type: String
   AudiogramSecretsVersion:
     Type: String
-  AdzeEcrImageTag:
+  JingleEcrImageTag:
     Type: String
-  AdzeSecretsVersion:
+  JingleSecretsVersion:
     Type: String
   CastleEcrImageTag:
     Type: String
@@ -117,7 +117,7 @@ Mappings:
       prefix: 28
     Castle:
       prefix: 35
-    Adze:
+    Jingle:
       prefix: 38
     Crier:
       prefix: 42
@@ -305,8 +305,8 @@ Resources:
         CastleSecretsVersion: !Ref CastleSecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/castle.prx.org.yml"]]
       TimeoutInMinutes: "5"
-  #### ADZE ##################################################################
-  AdzeStack:
+  #### JINGLE ##################################################################
+  JingleStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
     Properties:
@@ -320,7 +320,7 @@ Resources:
         PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
         PlatformALBHTTPListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPListenerArn
         PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
-        PlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Adze, prefix]
+        PlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Jingle, prefix]
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
         ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
         ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
@@ -336,9 +336,9 @@ Resources:
         SecretsBase:
             Fn::ImportValue:
               !Sub "${SecretsStackName}-SecretsBaseRegion"
-        AdzeEcrImageTag: !Ref AdzeEcrImageTag
-        AdzeSecretsVersion: !Ref AdzeSecretsVersion
-      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/adze.prx.org.yml"]]
+        JingleEcrImageTag: !Ref JingleEcrImageTag
+        JingleSecretsVersion: !Ref JingleSecretsVersion
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/jingle.prx.org.yml"]]
       TimeoutInMinutes: "5"
   #### AUDIOGRAM ###############################################################
   AudiogramStack:
@@ -646,9 +646,9 @@ Outputs:
   CastleHostedZoneDNSName:
     Description: Domain name for castle app
     Value: !GetAtt CastleStack.Outputs.HostedZoneDNSName
-  AdzeHostedZoneDNSName:
-    Description: Domain name for adze app
-    Value: !GetAtt AdzeStack.Outputs.HostedZoneDNSName
+  JingleHostedZoneDNSName:
+    Description: Domain name for jingle app
+    Value: !GetAtt JingleStack.Outputs.HostedZoneDNSName
   PublishHostedZoneDNSName:
     Description: Domain name for publish app
     Value: !GetAtt PublishStack.Outputs.HostedZoneDNSName
