--- a/stacks/jingle.prx.org.yml
+++ b/stacks/jingle.prx.org.yml
@@ -190,7 +190,7 @@ Resources:
         - Name: LoadBalancer
           Value: !Ref PlatformALBFullName
         - Name: TargetGroup
-          Value: !GetAtt jingleALBTargetGroup.TargetGroupFullName
+          Value: !GetAtt JingleALBTargetGroup.TargetGroupFullName
 Outputs:
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
