--- a/stacks/jingle.prx.org.yml
+++ b/stacks/jingle.prx.org.yml
@@ -8,7 +8,7 @@ Mappings:
       name: jingle-phoenix
 Conditions:
   CreateStagingResources: !Equals [!Ref EnvironmentType, Staging]
-  CreateProductionResources: false
+  CreateProductionResources: "false"
 Parameters:
   # VPC ########################################################################
   VPC:
