--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -308,6 +308,7 @@ Resources:
   #### JINGLE ##################################################################
   JingleStack:
     Type: "AWS::CloudFormation::Stack"
+    Condition: IsStaging # Staging only, for now
     DependsOn: ECSClusterStack
     Properties:
       NotificationARNs:
@@ -647,6 +648,7 @@ Outputs:
     Description: Domain name for castle app
     Value: !GetAtt CastleStack.Outputs.HostedZoneDNSName
   JingleHostedZoneDNSName:
+    Condition: IsStaging
     Description: Domain name for jingle app
     Value: !GetAtt JingleStack.Outputs.HostedZoneDNSName
   PublishHostedZoneDNSName:
