Export CodePipeline Slack webhook URL

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -542,3 +542,7 @@ Outputs:
     Value: !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${RestApiStage}/ike/codepipeline/approval"
   IkeSlashCommandsHandlerCallbackUrl:
     Value: !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${RestApiStage}/ike/slash-commands"
+  CodePipelineSlackWebhookUrl:
+    Value: !Ref CodePipelineSlackWebhookUrl
+    Export:
+      Name: !Sub ${AWS::StackName}-CodePipelineSlackWebhookUrl
