Use Ike webhook URL for approval messages

--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -546,3 +546,7 @@ Outputs:
     Value: !Ref CodePipelineSlackWebhookUrl
     Export:
       Name: !Sub ${AWS::StackName}-CodePipelineSlackWebhookUrl
+  IkeDeploysSlackSlackWebhookUrl:
+    Value: !Ref IkeDeploysSlackSlackWebhookUrl
+    Export:
+      Name: !Sub ${AWS::StackName}-IkeDeploysSlackSlackWebhookUrl
