--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -342,37 +342,37 @@ Resources:
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/jingle.prx.org.yml"]]
       TimeoutInMinutes: "5"
   #### AUDIOGRAM ###############################################################
-  AudiogramStack:
-    Type: "AWS::CloudFormation::Stack"
-    DependsOn: ECSClusterStack
-    Properties:
-      NotificationARNs:
-        - Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-      Parameters:
-        VPC: !GetAtt VPCStack.Outputs.VPC
-        PlatformALBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
-        PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
-        PlatformALBHTTPListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPListenerArn
-        PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
-        PlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Audiogram, prefix]
-        ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
-        ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
-        ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
-        EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-        EcrRegion: !Ref EcrRegion
-        OpsDebugMessagesSnsTopicArn:
-          Fn::ImportValue:
-            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-        EcrRegion: !Ref EcrRegion
-        SecretsBase:
-            Fn::ImportValue:
-              !Sub "${SecretsStackName}-SecretsBaseRegion"
-        AudiogramEcrImageTag: !Ref AudiogramEcrImageTag
-        AudiogramSecretsVersion: !Ref AudiogramSecretsVersion
-      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/audiogram.yml"]]
-      TimeoutInMinutes: "5"
+  # AudiogramStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   DependsOn: ECSClusterStack
+  #   Properties:
+  #     NotificationARNs:
+  #       - Fn::ImportValue:
+  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+  #     Parameters:
+  #       VPC: !GetAtt VPCStack.Outputs.VPC
+  #       PlatformALBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
+  #       PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
+  #       PlatformALBHTTPListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPListenerArn
+  #       PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
+  #       PlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Audiogram, prefix]
+  #       ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
+  #       ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
+  #       ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+  #       EnvironmentType: !Ref EnvironmentType
+  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+  #       EcrRegion: !Ref EcrRegion
+  #       OpsDebugMessagesSnsTopicArn:
+  #         Fn::ImportValue:
+  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+  #       EcrRegion: !Ref EcrRegion
+  #       SecretsBase:
+  #           Fn::ImportValue:
+  #             !Sub "${SecretsStackName}-SecretsBaseRegion"
+  #       AudiogramEcrImageTag: !Ref AudiogramEcrImageTag
+  #       AudiogramSecretsVersion: !Ref AudiogramSecretsVersion
+  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/audiogram.yml"]]
+  #     TimeoutInMinutes: "5"
   ##############################################################################
   # upload.prx.org #############################################################
   ##############################################################################
