Remove audiogram root stack output

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -641,9 +641,9 @@ Outputs:
     Description: >
       The dualstack DNS name for the platform application load balancer
     Value: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
-  AudiogramHostedZoneDNSName:
-    Description: Domain name for audiogram app
-    Value: !GetAtt AudiogramStack.Outputs.HostedZoneDNSName
+  # AudiogramHostedZoneDNSName:
+  #   Description: Domain name for audiogram app
+  #   Value: !GetAtt AudiogramStack.Outputs.HostedZoneDNSName
   CastleHostedZoneDNSName:
     Description: Domain name for castle app
     Value: !GetAtt CastleStack.Outputs.HostedZoneDNSName
