Add categorizer DNS record

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -403,6 +403,11 @@ Resources:
           TTL: "300"
           Type: A
           Name: !Sub fixer.${Domain}
+        - ResourceRecords:
+            - !Sub prx-categorizer.herokuapp.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub categorizer.${Domain}
   Contegix:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
