--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -31,10 +31,6 @@ Parameters:
     Type: String
     Default: ""
   # Application Specific
-  AudiogramEcrImageTag:
-    Type: String
-  AudiogramSecretsVersion:
-    Type: String
   JingleEcrImageTag:
     Type: String
   JingleSecretsVersion:
@@ -121,8 +117,6 @@ Mappings:
       prefix: 38
     Crier:
       prefix: 42
-    Audiogram:
-      prefix: 49
 Resources:
   VPCStack:
     Type: "AWS::CloudFormation::Stack"
@@ -203,7 +197,7 @@ Resources:
   #   Properties:
   #     NotificationARNs:
   #       - Fn::ImportValue:
-  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+  #           !Sukb "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
   #     Parameters:
   #       RadiotopiaCertificateArn: !GetAtt CertificateStack.Outputs.RadiotopiaCertificateArn
   #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/media.radiotopia.fm.yml"]]
@@ -341,60 +335,6 @@ Resources:
         JingleSecretsVersion: !Ref JingleSecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/jingle.prx.org.yml"]]
       TimeoutInMinutes: "5"
-  #### AUDIOGRAM ###############################################################
-  # AudiogramStack:
-  #   Type: "AWS::CloudFormation::Stack"
-  #   DependsOn: ECSClusterStack
-  #   Properties:
-  #     NotificationARNs:
-  #       - Fn::ImportValue:
-  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-  #     Parameters:
-  #       VPC: !GetAtt VPCStack.Outputs.VPC
-  #       PlatformALBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
-  #       PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
-  #       PlatformALBHTTPListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPListenerArn
-  #       PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
-  #       PlatformALBListenerPriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Audiogram, prefix]
-  #       ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
-  #       ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
-  #       ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
-  #       EnvironmentType: !Ref EnvironmentType
-  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-  #       EcrRegion: !Ref EcrRegion
-  #       OpsDebugMessagesSnsTopicArn:
-  #         Fn::ImportValue:
-  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-  #       EcrRegion: !Ref EcrRegion
-  #       SecretsBase:
-  #           Fn::ImportValue:
-  #             !Sub "${SecretsStackName}-SecretsBaseRegion"
-  #       AudiogramEcrImageTag: !Ref AudiogramEcrImageTag
-  #       AudiogramSecretsVersion: !Ref AudiogramSecretsVersion
-  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/audiogram.yml"]]
-  #     TimeoutInMinutes: "5"
-  ##############################################################################
-  # upload.prx.org #############################################################
-  ##############################################################################
-  # TODO TemplateURL needs to look in InfrastructureCodeBucket for some object
-  #  labeled with the lambda code version (probably git commit sha)
-  # UploadLambdaStack:
-  #   Type: "AWS::CloudFormation::Stack"
-  #   Properties:
-  #     NotificationARNs:
-  #       - Fn::ImportValue:
-  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-  #     Parameters:
-  #       OpsWarnMessagesSnsTopicArn:
-  #         - Fn::ImportValue:
-  #             !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-  #       PRXUploadAccessKey: !Ref PRXUploadAccessKey
-  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
-  #       CodeBucket: !Ref InfrastructureCodeBucket
-  #       LambdaFunctionCodeS3Key: !Ref UploadLambdaZipName
-  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
-  #     TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/upload.prx.org/${UploadGitCommit}.zip"
-  #     TimeoutInMinutes: "5"
   #### PLAY ####################################################################
   PlayStack:
     Type: "AWS::CloudFormation::Stack"
@@ -641,9 +581,6 @@ Outputs:
     Description: >
       The dualstack DNS name for the platform application load balancer
     Value: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
-  # AudiogramHostedZoneDNSName:
-  #   Description: Domain name for audiogram app
-  #   Value: !GetAtt AudiogramStack.Outputs.HostedZoneDNSName
   CastleHostedZoneDNSName:
     Description: Domain name for castle app
     Value: !GetAtt CastleStack.Outputs.HostedZoneDNSName
