--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -197,7 +197,7 @@ Resources:
   #   Properties:
   #     NotificationARNs:
   #       - Fn::ImportValue:
-  #           !Sukb "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
   #     Parameters:
   #       RadiotopiaCertificateArn: !GetAtt CertificateStack.Outputs.RadiotopiaCertificateArn
   #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/media.radiotopia.fm.yml"]]
