--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -335,6 +335,28 @@ Resources:
         JingleSecretsVersion: !Ref JingleSecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/jingle.prx.org.yml"]]
       TimeoutInMinutes: "5"
+  ##############################################################################
+  # upload.prx.org #############################################################
+  ##############################################################################
+  # TODO TemplateURL needs to look in InfrastructureCodeBucket for some object
+  #  labeled with the lambda code version (probably git commit sha)
+  # UploadLambdaStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - Fn::ImportValue:
+  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+  #     Parameters:
+  #       OpsWarnMessagesSnsTopicArn:
+  #         - Fn::ImportValue:
+  #             !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+  #       PRXUploadAccessKey: !Ref PRXUploadAccessKey
+  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
+  #       CodeBucket: !Ref InfrastructureCodeBucket
+  #       LambdaFunctionCodeS3Key: !Ref UploadLambdaZipName
+  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
+  #     TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/upload.prx.org/${UploadGitCommit}.zip"
+  #     TimeoutInMinutes: "5"
   #### PLAY ####################################################################
   PlayStack:
     Type: "AWS::CloudFormation::Stack"
