--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -173,7 +173,7 @@ Resources:
       Tags:
         - Key: Project
           Value: Infrastructure
-      Timeout: 3
+      Timeout: 10
   SnsOpsMessagesToSlackLambdaFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -336,11 +336,11 @@ Resources:
       Dimensions:
         - Name: FunctionName
           Value: !Ref SlackMessageRelayLambdaFunction
-  SlackRelayErrorAlarm:
+  SlackOpsMessagesErrorAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
       ActionsEnabled: true
-      AlarmName: Slack Relay Lambda Errors
+      AlarmName: Legacy Slack Messages Lambda Errors
       AlarmActions:
         - !Ref OpsWarnMessagesSnsTopic
       InsufficientDataActions:
@@ -348,7 +348,7 @@ Resources:
       OKActions:
         - !Ref OpsWarnMessagesSnsTopic
       AlarmDescription: >
-        The error rate on the Slack relay lambda has exceeded 0 in
+        The error rate on the legacy Slack messages lambda has exceeded 0 in
         the last minute.
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: "1"
