--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -606,26 +606,26 @@ Resources:
   #                 - "sns:Publish"
   #               Resource:
   #                 - !Ref OpsDebugMessagesSnsTopicArn
-  # ESCClusterEventsToSnsRule:
-  #   Type: "AWS::Events::Rule"
-  #   Properties:
-  #     Description: Sends ECS cluster events to an SNS topic
-  #     EventPattern:
-  #       Fn::Sub:
-  #         - |
-  #           {
-  #             "source": ["aws.ecs"],
-  #             "detail-type": [
-  #               "ECS Task State Change",
-  #               "ECS Container Instance State Change"
-  #             ],
-  #             "detail": {
-  #               "clusterArn": [
-  #                 "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:cluster/${ECSCluster}"
-  #               ]
-  #             }
-  #           }
-  #     State: ENABLED
+  ESCClusterEventsToSnsRule:
+    Type: "AWS::Events::Rule"
+    Properties:
+      Description: Sends ECS cluster events to an SNS topic
+      EventPattern:
+        Fn::Sub:
+          - |
+            {
+              "source": ["aws.ecs"],
+              "detail-type": [
+                "ECS Task State Change",
+                "ECS Container Instance State Change"
+              ],
+              "detail": {
+                "clusterArn": [
+                  "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:cluster/${ECSCluster}"
+                ]
+              }
+            }
+      State: DISABLED
   #     Targets:
   #       - Arn: !Ref OpsDebugMessagesSnsTopicArn
   #         Id: !Sub "${AWS::StackName}.ECS-Cluster-Events"
