--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -520,6 +520,7 @@ Resources:
                   - "ec2:*"
                   - "ecs:*"
                   - "elasticloadbalancing:*"
+                  - "events:*"
                   - "iam:*"
                   - "lambda:*"
                   - "logs:*"
