Only create ECS events rule in production

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -8,6 +8,8 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates an ESC cluster and an associated Auto Scaling group into which
   Docker applications can be deployed
+Conditions:
+  IsProduction: !Equals [!Ref EnvironmentType, Production]
 Parameters:
   InfrastructureStorageStackName:
     Type: String
@@ -607,6 +609,7 @@ Resources:
   #               Resource:
   #                 - !Ref OpsDebugMessagesSnsTopicArn
   ESCClusterEventsToSnsRule:
+    Condition: IsProduction
     Type: "AWS::Events::Rule"
     Properties:
       Description: Sends ECS cluster events to an SNS topic
