--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -619,8 +619,7 @@ Resources:
             {
               "source": ["aws.ecs"],
               "detail-type": [
-                "ECS Task State Change",
-                "ECS Container Instance State Change"
+                "ECS Task State Change"
               ],
               "detail": {
                 "clusterArn": [
