Add PRSS DNS record

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -440,6 +440,17 @@ Resources:
           AliasTarget:
             DNSName: d11pcyef3meeu9.cloudfront.net.
             HostedZoneId: Z2FDTNDATAQYW2
+  Prss:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: Legacy PRSS end point
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - "205.153.38.233"
+          TTL: "300"
+          Type: A
+          Name: !Sub prss.${Domain}
   Localhost:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
