Add upload.prx.org DNS record

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -408,6 +408,11 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub categorizer.${Domain}
+        - ResourceRecords:
+            - !Sub d31nihxqseius7.cloudfront.net.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub upload.${Domain}
   Contegix:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
