Fix ZenDesk DNS record

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -1354,7 +1354,7 @@ Resources:
       HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
-            - unbouncepages.com.
+            - prx.zendesk.com.
           TTL: "300"
           Type: CNAME
           Name: !Sub help.${Domain}
