Fix Found podcast CDN DNS record

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -81,7 +81,7 @@ Resources:
           Type: CNAME
           Name: !Sub cdn-esquire.${Domain}
         - ResourceRecords:
-            - ds.m9w6g3q5.hwcdn.net.
+            - cds.m9w6g3q5.hwcdn.net.
           TTL: "300"
           Type: CNAME
           Name: !Sub cdn-found.${Domain}
