Add missing legacy DNS records

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -1136,6 +1136,36 @@ Resources:
       HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
+            - "199.119.122.230"
+          TTL: "300"
+          Type: A
+          Name: !Sub podcast.${Domain}
+        - ResourceRecords:
+            - "199.119.122.230"
+          TTL: "300"
+          Type: A
+          Name: !Sub podcasts.${Domain}
+        - ResourceRecords:
+            - "199.119.122.230"
+          TTL: "300"
+          Type: A
+          Name: !Sub widgetsdemo.${Domain}
+        - ResourceRecords:
+            - "199.119.122.230"
+          TTL: "300"
+          Type: A
+          Name: !Sub www.podcast.${Domain}
+        - ResourceRecords:
+            - "199.119.122.230"
+          TTL: "300"
+          Type: A
+          Name: !Sub www.podcasts.${Domain}
+        - ResourceRecords:
+            - "199.119.122.230"
+          TTL: "300"
+          Type: A
+          Name: !Sub saltcast.${Domain}
+        - ResourceRecords:
             - s3.amazonaws.com.
           TTL: "300"
           Type: CNAME
@@ -1195,6 +1225,11 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub generation.${Domain}
+        - ResourceRecords:
+            - youthradioleaders.prx.org.s3-website-us-east-1.amazonaws.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub youthradioleaders.${Domain}
   Unbounce:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
