--- a/storage/storage.yml
+++ b/storage/storage.yml
@@ -47,6 +47,16 @@ Resources:
           Value: Infrastructure
       VersioningConfiguration:
         Status: Suspended
+  InfrastructureApplicationCodeBucket:
+    Type: "AWS::S3::Bucket"
+    DeletionPolicy: Retain
+    Properties:
+      BucketName: !Sub ${BucketNamePrefix}-${AWS::Region}-application-code
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+      VersioningConfiguration:
+        Status: Enabled
 Outputs:
   InfrastructureSupportBucket:
     Value: !Ref InfrastructureSupportBucket
@@ -64,3 +74,7 @@ Outputs:
     Value: !Ref InfrastructureSnapshotsBucket
     Export:
       Name: !Sub ${AWS::StackName}-InfrastructureSnapshotsBucket
+  InfrastructureApplicationCodeBucket:
+    Value: !Ref InfrastructureApplicationCodeBucket
+    Export:
+      Name: !Sub ${AWS::StackName}-InfrastructureApplicationCodeBucket
