--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -69,11 +69,10 @@ Parameters:
     Type: String
   FourohfourEcrImageTag:
     Type: String
-  # Coming Soon
-  # UploadGitCommit:
-  #   Type: String
-  # PRXUploadAccessKey:
-  #   Type: String
+  UploadLambdaCodeS3ObjectVersion:
+    Type: String
+  PRXUploadAccessKey:
+    Type: String
   # Parameter Overrides
   InfrastructureStorageStackName:
     Type: String
@@ -340,23 +339,25 @@ Resources:
   ##############################################################################
   # TODO TemplateURL needs to look in InfrastructureCodeBucket for some object
   #  labeled with the lambda code version (probably git commit sha)
-  # UploadLambdaStack:
-  #   Type: "AWS::CloudFormation::Stack"
-  #   Properties:
-  #     NotificationARNs:
-  #       - Fn::ImportValue:
-  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-  #     Parameters:
-  #       OpsWarnMessagesSnsTopicArn:
-  #         - Fn::ImportValue:
-  #             !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-  #       PRXUploadAccessKey: !Ref PRXUploadAccessKey
-  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
-  #       CodeBucket: !Ref InfrastructureCodeBucket
-  #       LambdaFunctionCodeS3Key: !Ref UploadLambdaZipName
-  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${EnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
-  #     TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/upload.prx.org/${UploadGitCommit}.zip"
-  #     TimeoutInMinutes: "5"
+  UploadLambdaStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+      Parameters:
+        OpsWarnMessagesSnsTopicArn:
+          - Fn::ImportValue:
+              !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        PRXUploadAccessKey: !Ref PRXUploadAccessKey
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
+        CodeS3Bucket:
+          - Fn::ImportValue:
+              !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+        CodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
+        TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/upload.prx.org.yml"]]
+
+      TimeoutInMinutes: "5"
   #### PLAY ####################################################################
   PlayStack:
     Type: "AWS::CloudFormation::Stack"
