fix mapping abbrev

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -350,7 +350,7 @@ Resources:
           - Fn::ImportValue:
               !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         PRXUploadAccessKey: !Ref PRXUploadAccessKey
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref EnvironmentType, abbreviation]
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         CodeS3Bucket:
           - Fn::ImportValue:
               !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
