--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -346,15 +346,15 @@ Resources:
         - Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
       Parameters:
-        OpsWarnMessagesSnsTopicArn:
-          - Fn::ImportValue:
-              !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
-        PRXUploadAccessKey: !Ref PRXUploadAccessKey
+        # OpsWarnMessagesSnsTopicArn:
+        #   - Fn::ImportValue:
+        #       !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        # PRXUploadAccessKey: !Ref PRXUploadAccessKey
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-        CodeS3Bucket:
-          - Fn::ImportValue:
-              !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
-        CodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
+        # CodeS3Bucket:
+        #   - Fn::ImportValue:
+        #       !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+        # CodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/upload.prx.org.yml"]]
       TimeoutInMinutes: "5"
   #### PLAY ####################################################################
