Turn on upload for now
And hopefully forever

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -334,28 +334,26 @@ Resources:
         JingleSecretsVersion: !Ref JingleSecretsVersion
       TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/jingle.prx.org.yml"]]
       TimeoutInMinutes: "5"
-  ##############################################################################
-  # upload.prx.org #############################################################
-  ##############################################################################
+  #### upload.prx.org ##########################################################
   # TODO currently erroring out with "Your access has been denied by S3, please make sure your request credentials have permission to GetObject for prx-infrastructure-us-east-1-application-code/lambda/PRX-upload.prx.org.zip. S3 Error Code: AccessDenied. S3 Error Message: Access Denied " on the Create for UploadLambdaFunction
-  # UploadLambdaStack:
-  #   Type: "AWS::CloudFormation::Stack"
-  #   Properties:
-  #     NotificationARNs:
-  #       - Fn::ImportValue:
-  #           !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-  #     Parameters:
-  #       OpsErrorMessagesSnsTopicArn:
-  #         Fn::ImportValue:
-  #           !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
-  #       PRXUploadAccessKey: !Ref PRXUploadAccessKey
-  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-  #       CodeS3Bucket:
-  #         Fn::ImportValue:
-  #             !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
-  #       CodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
-  #     TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/upload.prx.org.yml"]]
-  #     TimeoutInMinutes: "5"
+  UploadLambdaStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+      Parameters:
+        OpsErrorMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        PRXUploadAccessKey: !Ref PRXUploadAccessKey
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        CodeS3Bucket:
+          Fn::ImportValue:
+              !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket"
+        CodeS3ObjectVersion: !Ref UploadLambdaCodeS3ObjectVersion
+      TemplateURL: !Join ["", ["http://s3", !If [IsUsEast1, "", "-"], !If [IsUsEast1, "", !Ref "AWS::Region"], ".amazonaws.com/", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", "/", !Ref InfrastructureGitCommit, "/stacks/upload.prx.org.yml"]]
+      TimeoutInMinutes: "5"
   #### PLAY ####################################################################
   PlayStack:
     Type: "AWS::CloudFormation::Stack"
