Add object version access for Lambda stack deploys

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -454,8 +454,6 @@ Resources:
             Action:
               - "sts:AssumeRole"
       Path: "/"
-      # TODO This will need access to S3 buckets where Lambda code archives are
-      # stored at some point
       Policies:
         # Lambda functions used by CI/CD; archives are accessed through S3
         - PolicyName: SupportBucketAccess
@@ -475,6 +473,7 @@ Resources:
               - Effect: Allow
                 Action:
                   - "s3:GetObject"
+                  - "s3:GetObjectVersion"
                 Resource:
                   - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket", "/*"]]
         # Nested stack templates are accessed through S3
