Enable NTP access

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -273,6 +273,10 @@ Resources:
       GroupDescription: Enable return traffic on cluster instances
       SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
+          IpProtocol: udp
+          FromPort: 123
+          ToPort: 123
+        - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
           FromPort: 1024
           ToPort: 65535
