--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -214,6 +214,18 @@ Resources:
       Protocol: 17 # UDP
       RuleAction : allow
       RuleNumber : 210
+  InboundNTPNetworkAclEntry:
+    Type: "AWS::EC2::NetworkAclEntry"
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: false
+      NetworkAclId: !Ref NetworkAcl
+      PortRange:
+        From: 123
+        To: 123
+      Protocol: 17 # UDP
+      RuleAction : allow
+      RuleNumber : 220
   InboundReturnTrafficNetworkAclEntry:
     Type: "AWS::EC2::NetworkAclEntry"
     Properties:
