--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -104,6 +104,15 @@ Resources:
       DefaultActions:
         - Type: forward
           TargetGroupArn: !Ref DovetailALBTargetGroup # TODO: change to deux
+  DovetailDeuxALBHTTPListener:
+    Type: "AWS::ElasticLoadBalancingV2::Listener"
+    Properties:
+      LoadBalancerArn: !Ref DovetailALB
+      Port: 8888
+      Protocol: HTTP
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn: !Ref DovetailDeuxALBTargetGroup
   DovetailProxyALBHTTPListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Properties:
