Try depending service -> listener

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -304,6 +304,7 @@ Resources:
     Type: "AWS::ECS::Service"
     DependsOn:
       - DovetailALBHTTPListener
+      - DovetailDeuxALBHTTPListener
       - DovetailALBHTTPSListener
     Properties:
       Cluster: !Ref ECSCluster
