Move listeners to new DT

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -103,7 +103,7 @@ Resources:
       Protocol: HTTP
       DefaultActions:
         - Type: forward
-          TargetGroupArn: !Ref DovetailALBTargetGroup # TODO: change to deux
+          TargetGroupArn: !Ref DovetailDeuxALBTargetGroup
   DovetailDeuxALBHTTPListener:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
@@ -135,7 +135,7 @@ Resources:
       Protocol: HTTPS
       DefaultActions:
         - Type: forward
-          TargetGroupArn: !Ref DovetailALBTargetGroup # TODO: change to deux
+          TargetGroupArn: !Ref DovetailDeuxALBTargetGroup
   DovetailProxyALBHTTPSListenerRule:
     Type: "AWS::ElasticLoadBalancingV2::ListenerRule"
     Properties:
