Fix typo in prxu.org hosted zone

--- a/etc/prxu.org-hosted_zone.yml
+++ b/etc/prxu.org-hosted_zone.yml
@@ -11,7 +11,7 @@ Resources:
     Type: "AWS::Route53::HostedZone"
     Properties:
       HostedZoneConfig:
-        Comment: User-generated Content
+        Comment: WIP User-generated Content
       # HostedZoneTags:
       #   - Key: Project
       #     Value: radiotopia.fm
@@ -48,7 +48,7 @@ Resources:
           AliasTarget:
             DNSName: dualstack.infra-dovet-1jujps3p3xej3-652325001.us-east-1.elb.amazonaws.com.
             HostedZoneId: Z35SXDOTRQ7X7K
-        - Type: AAAAA
+        - Type: AAAA
           Name: !Sub dovetail.${Domain}
           AliasTarget:
             DNSName: dualstack.infra-dovet-1jujps3p3xej3-652325001.us-east-1.elb.amazonaws.com.
@@ -58,7 +58,7 @@ Resources:
           AliasTarget:
             DNSName: dualstack.infra-dovet-1jujps3p3xej3-652325001.us-east-1.elb.amazonaws.com.
             HostedZoneId: Z35SXDOTRQ7X7K
-        - Type: AAAAA
+        - Type: AAAA
           Name: !Sub tal.dovetail.${Domain}
           AliasTarget:
             DNSName: dualstack.infra-dovet-1jujps3p3xej3-652325001.us-east-1.elb.amazonaws.com.
@@ -68,7 +68,7 @@ Resources:
           AliasTarget:
             DNSName: dualstack.infra-dovet-1y2ncjszlrdmz-1988316390.us-east-1.elb.amazonaws.com.
             HostedZoneId: Z35SXDOTRQ7X7K
-        - Type: AAAAA
+        - Type: AAAA
           Name: !Sub dovetail.staging.${Domain}
           AliasTarget:
             DNSName: dualstack.infra-dovet-1y2ncjszlrdmz-1988316390.us-east-1.elb.amazonaws.com.
