adds Condition: IsStaging for deploying to staging only, for now

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -597,6 +597,7 @@ Resources:
   #### METRICS #################################################################
   MetricsStack:
     Type: "AWS::CloudFormation::Stack"
+    Condition: IsStaging # Staging only, for now
     DependsOn: ECSClusterStack
     Properties:
       NotificationARNs:
