adds Condition: IsStaging to MetricsHostedZoneDNSName

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -672,5 +672,6 @@ Outputs:
     Description: Domain name for id app
     Value: !GetAtt IdStack.Outputs.HostedZoneDNSName
   MetricsHostedZoneDNSName:
-      Description: Domain name for metrics app
-      Value: !GetAtt MetricsStack.Outputs.HostedZoneDNSName
+    Condition: IsStaging
+    Description: Domain name for metrics app
+    Value: !GetAtt MetricsStack.Outputs.HostedZoneDNSName
