--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -341,6 +341,11 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub feeder.${Domain}
+        - ResourceRecords:
+            - metrics.prx.tech.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub metrics.${Domain}
   PrxDotOrg:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
