Pass nonce to Dovetail stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -502,6 +502,7 @@ Resources:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+        PipelineExecutionNonce: !Ref PipelineExecutionNonce
         EcrRegion: !Ref EcrRegion
         SecretsBase:
             Fn::ImportValue:
