--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -35,6 +35,8 @@ Parameters:
     Type: String
   SecretsBase:
     Type: String
+  PipelineExecutionNonce:
+    Type: String
   # Dovetail ###################################################################
   DovetailEcrImageTag:
     Type: String
