Remove DesiredCount from ASG for testing

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -434,7 +434,7 @@ Resources:
         - !Ref VPCSubnet2AZ
         - !Ref VPCSubnet3AZ
       Cooldown: "240"
-      DesiredCapacity: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DefaultDesiredCapacity]
+      # DesiredCapacity: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DefaultDesiredCapacity]
       HealthCheckGracePeriod: 512
       HealthCheckType: EC2
       LaunchConfigurationName: !Ref ECSClusterASGLaunchConfiguration
