Fix rollover lambda role

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -385,7 +385,7 @@ Resources:
       Description: Allows for DesiredCount persistence on ECS services
       Handler: index.handler
       MemorySize: 128
-      Role: !GetAtt LambdaExecutionIAMRole.Arn
+      Role: !GetAtt DovetailServiceDesiredCountRolloverIamRole.Arn
       Runtime: nodejs6.10
       Tags:
         - Key: Project
