--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -37,6 +37,8 @@ Parameters:
     Type: String
   PipelineExecutionNonce:
     Type: String
+  InfrastructureStorageStackName:
+    Type: String
   # Dovetail ###################################################################
   DovetailEcrImageTag:
     Type: String
