--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -500,6 +500,7 @@ Resources:
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        InfrastructureStorageStackName: !Ref InfrastructureStorageStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         PipelineExecutionNonce: !Ref PipelineExecutionNonce
