Add basic custom resource for rollover

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -393,8 +393,17 @@ Resources:
         - Key: Project
           Value: Infrastructure
       Timeout: 8
+  DovetailServiceDesiredCountRolloverResource:
+    Type: "Custom::EcsServiceSizeRollover"
+    Version: "1.0"
+    Properties:
+      Rotation: !Ref PipelineExecutionNonce
+      ServiceToken: !GetAtt DovetailServiceDesiredCountRolloverLambdaFunction.Arn
 Outputs:
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
       dovetail.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
+  DovetailServiceDesiredCountRolloverValue:
+    Description: testing
+    Value: !GetAtt DovetailServiceDesiredCountRolloverResource.foo
