Send cluster name to custom resource

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -397,6 +397,7 @@ Resources:
     Type: "Custom::EcsServiceSizeRollover"
     Version: "1.0"
     Properties:
+      ClusterName: !Ref ECSCluster
       Rotation: !Ref PipelineExecutionNonce
       ServiceToken: !GetAtt DovetailServiceDesiredCountRolloverLambdaFunction.Arn
 Outputs:
