Add Lambda managed policy to rollover role

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -376,6 +376,8 @@ Resources:
                 Resource:
                   - "*"
                   # - !Sub ${AWS::StackName}-DovetailService TODO
+      ManagedPolicyArns:
+        - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
   DovetailServiceDesiredCountRolloverLambdaFunction:
     Type: "AWS::Lambda::Function"
     Properties:
