Pass service name to custom resource

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -401,6 +401,7 @@ Resources:
     Properties:
       ClusterName: !Ref ECSCluster
       Rotation: !Ref PipelineExecutionNonce
+      ServiceName: !GetAtt DovetailDeuxService.Name # TODO This can't actually reference the service once the service is using the return value
       ServiceToken: !GetAtt DovetailServiceDesiredCountRolloverLambdaFunction.Arn
 Outputs:
   HostedZoneDNSName:
