Return DesiredCount value from ECS service

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -410,4 +410,4 @@ Outputs:
       dovetail.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
   DovetailServiceDesiredCountRolloverValue:
     Description: testing
-    Value: !GetAtt DovetailServiceDesiredCountRolloverResource.foo
+    Value: !GetAtt DovetailServiceDesiredCountRolloverResource.DesiredCount
