Output might work now

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -408,6 +408,6 @@ Outputs:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
       dovetail.${EnvironmentTypeAbbreviation}-${VPC}.prx.tech.
-  # DovetailServiceDesiredCountRolloverValue:
-  #   Description: testing
-  #   Value: !GetAtt DovetailServiceDesiredCountRolloverResource.DesiredCount
+  DovetailServiceDesiredCountRolloverValue:
+    Description: testing
+    Value: !GetAtt DovetailServiceDesiredCountRolloverResource.DesiredCount
