Add support for default desired count

--- a/stacks/dovetail.prx.org.yml
+++ b/stacks/dovetail.prx.org.yml
@@ -442,6 +442,9 @@ Resources:
             !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
         S3Key: utility/ecs-service-size-rollover.zip
       Description: Allows for DesiredCount persistence on ECS services
+      Environment:
+        Variables:
+          DEFAULT_DESIRED_COUNT: 10
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt DovetailServiceDesiredCountRolloverIamRole.Arn
